# Starstream

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  Makefile  README.md  SECURITY.md  test_impact  test_permissioned
.github/workflows/: build.yml
example_contract/: Cargo.toml
example_contract_permissioned/: Cargo.toml  README.md
example_contract_permissioned/src/: lib.rs  main.rs
grammar/: grammar.ebnf
grammar/examples/: effect_handlers.star  oracle.star  pay_to_public_key_hash.star  permissioned_usdc.star  simple_oracle.star  tokens.star
impact_vm_example/: Cargo.toml  build.rs
impact_vm_example/src/: defs.rs  main.rs
new-starstream/: .gitignore  todo.md
new-starstream/IVC/: README.md
new-starstream/MCC/: README.md
new-starstream/lookups/: README.md
new-starstream/mock-ledger/: Cargo.toml  README.md
new-starstream/mock-ledger/src/: main.rs
new-starstream/starstream-dsl/: CONSOLIDATED-README.md  Cargo.toml  impl-plan.md
new-starstream/starstream-dsl/docs/: design.md  language-spec.md  opcode-spec.md
new-starstream/starstream-dsl/src/: lib.rs
new-starstream/starstream-dsl/starstream-compiler/: Cargo.toml
new-starstream/starstream-dsl/starstream-compiler/src/: compiler.rs  lib.rs  parser.rs
new-starstream/starstream-dsl/starstream-interpreter/: Cargo.toml
new-starstream/starstream-dsl/starstream-interpreter/src/: context.rs  interpreter.rs  lib.rs
new-starstream/starstream-dsl/starstream-types/: Cargo.toml
new-starstream/starstream-dsl/starstream-types/src/: ast.rs  error.rs  lib.rs  opcodes.rs  symbols.rs  typechecking.rs
new-starstream/starstream-dsl/tests/: README.md  insta_simple_tests.rs  props.rs
new-starstream/starstream-dsl/tests/inputs/: boolean_operations.imp  conditional.imp  error_undefined_variable.imp  simple_arithmetic.imp  while_loop.imp
new-starstream/starstream-dsl/tests/snapshots/: insta_simple_tests__boolean_operations_ast.snap  insta_simple_tests__boolean_operations_opcodes.snap  insta_simple_tests__boolean_operations_result.snap  insta_simple_tests__conditional_ast.snap  insta_simple_tests__conditional_opcodes.snap  insta_simple_tests__conditional_result.snap  insta_simple_tests__error_undefined_variable_ast.snap  insta_simple_tests__error_undefined_variable_compilation_error.snap  insta_simple_tests__simple_arithmetic_ast.snap  insta_simple_tests__simple_arithmetic_opcodes.snap  insta_simple_tests__simple_arithmetic_result.snap  insta_simple_tests__while_loop_ast.snap  insta_simple_tests__while_loop_opcodes.snap  insta_simple_tests__while_loop_result.snap
starstream_cli/: Cargo.toml
starstream_cli/src/: main.rs
starstream_compiler/: Cargo.toml
starstream_compiler/src/: ast.rs  codegen.rs  lib.rs  scope_resolution.rs  symbols.rs
starstream_compiler/src/parser/: mod.rs
starstream_compiler/src/typechecking/: effects.rs  error.rs  mod.rs  types.rs
starstream_ivc_proto/: Cargo.toml  README.md
starstream_ivc_proto/src/: circuit.rs  e2e.rs  lib.rs  neo.rs
starstream_ivc_proto/src/poseidon2/: air.rs  constants.rs  gadget.rs  goldilocks.rs  linear_layers.rs  math.rs  mod.rs  vectorized.rs
starstream_nova/: Cargo.toml
starstream_sandbox/: Cargo.toml
starstream_sandbox/src/: main.rs
starstream_sys/: Cargo.toml
starstream_sys/src/: lib.rs
starstream_vm/: Cargo.toml
starstream_vm/examples/: impact_vm.rs  self_test_permissioned.rs
starstream_vm/src/: lib.rs
starstream_vm/tests/: test_codegen_pay_to_public_key_hash.rs  test_codegen_token_binding.rs
tree-sitter-starstream/: grammar.js  tree-sitter.json
tree-sitter-starstream/queries/: highlights.scm  locals.scm
tree-sitter-starstream/test/corpus/: oracle.txt  script.txt  utxo.txt
website/src/: examples.ts
