[workspace]
members = [
    "example_contract",
    "example_contract_permissioned",
    "impact_vm_example",
    "starstream_cli",
    "starstream_compiler",
    "starstream_sandbox",
    "starstream_sys",
    "starstream_vm",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch."https://github.com/ICME-Lab/zkEngine_dev"]
wasmi = { git = "https://github.com/SpaceManiac/zkEngine_dev", branch = "starstream" }
zk-engine = { git = "https://github.com/SpaceManiac/zkEngine_dev", branch = "starstream" }

# https://github.com/lurk-lab/grumpkin-msm/pull/15
[patch."https://github.com/lurk-lab/grumpkin-msm"]
grumpkin-msm = { git = "https://github.com/SpaceManiac/grumpkin-msm", branch = "patch/rand-dependency" }
