[workspace]
package.license = "Apache-2.0"
members = [
    "example_contract",
    "example_contract_permissioned",
    "starstream_cli",
    "starstream_compiler",
    "starstream_sandbox",
    "starstream_sys",
    "starstream_vm",
    "starstream_nova",
    "starstream_lsp",
]
resolver = "2"

[profile.dev]
panic = "abort"
# Work around https://github.com/ICME-Lab/zkEngine_dev/issues/48
overflow-checks = false

[profile.release]
panic = "abort"
