[package]
name = "starstream_ivc_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false  }
ark-relations = { version = "0.5.0", default-features = false }
ark-r1cs-std = {  version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", features = ["scalar_field"] }
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3" }

neo = { git = "https://github.com/nicarq/halo3", rev = "3b2a85115984b2c2cbcf90dce394075e045c6931", features = ["fs-guard"] }
neo-math = { git = "https://github.com/nicarq/halo3", rev = "3b2a85115984b2c2cbcf90dce394075e045c6931" }
neo-ccs = { git = "https://github.com/nicarq/halo3", rev = "3b2a85115984b2c2cbcf90dce394075e045c6931" }
neo-ajtai = { git = "https://github.com/nicarq/halo3", rev = "3b2a85115984b2c2cbcf90dce394075e045c6931" }
rand = "0.9"

p3-goldilocks = { version = "0.3.0", default-features = false }
p3-field = "0.3.0"
p3-symmetric = "0.3.0"
p3-poseidon2 = "0.3.0"
