cargo-features = ["per-package-target"]

[package]
name = "starstream_sandbox"
version = "0.0.0"
edition = "2024"
license.workspace = true

forced-target = "wasm32-unknown-unknown"

[[bin]]
name = "starstream_sandbox"
test = false

[dependencies]
getrandom = { version = "0.2.16", features = ["custom"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
starstream_compiler = { path = "../starstream_compiler" }
starstream_vm = { path = "../starstream_vm" }
termcolor = "1.4.1"
wasmprinter = "0.229.0"
