[package]
name = "starstream_vm"
version = "0.0.0"
edition = "2024"
license = "MIT"

[dependencies]
#binaryen = "0.13.0"
byteorder = "1.5.0"
rand = "0.8.5"
wasmi = { git = "https://github.com/ICME-Lab/zkEngine_dev" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = "0.10.8"
zk-engine = { git = "https://github.com/ICME-Lab/zkEngine_dev" }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
wat = "1.229.0"

[dev-dependencies]
env_logger = "0.11.8"
tempfile = "3.20.0"
