[package]
name = "starstream-dsl"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien <sebastien@example.com>"]
description = "Starstream DSL compiler and interpreter"
license = "MIT"

[workspace]

[dependencies]
starstream-types = { path = "./starstream-types" }
starstream-compiler = { path = "./starstream-compiler" }
starstream-interpreter = { path = "./starstream-interpreter" }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
insta = "1.43"
quickcheck = "1.0.3"
quickcheck_derive = "0.3.0"
quickcheck_macros = "1.1.0"
starstream-types = { path = "./starstream-types", features = ["quickcheck"]}
starstream-interpreter = { path = "./starstream-interpreter", features = ["quickcheck"]}

[lib]
name = "starstream_dsl"
crate-type = ["cdylib", "rlib"]
