[package]
name = "starstream-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien <sebastien@example.com>"]
description = "Interpreter for the Starstream DSL"
license = "MIT"

[dependencies]
starstream-types = { path = "../starstream-types" }
quickcheck = { version = "1.0.3", optional = true }
quickcheck_macros = { version = "1.1.0", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"

[features]
quickcheck = ["dep:quickcheck", "dep:quickcheck_macros"]
