[package]
name = "starstream-types"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien <sebastien@example.com>"]
description = "Shared types for Starstream DSL"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
quickcheck = { version = "1.0.3", optional = true }
quickcheck_macros = { version = "1.1.0", optional = true }
chumsky = "0.11.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[features]
quickcheck = ["dep:quickcheck", "dep:quickcheck_macros"]
